EXTRA_DIST = BUGREPORT CLOSEDBUGS COPYRIGHT.MOTIF Imakefile LICENSE OPENBUGS README README.ICS RELEASE RELNOTES openmotif-2.1.30.spec INSTALL.configure
MAINTAINERCLEANFILES = Makefile.in configure libtool config.guess config.sub ltconfig ltmain.sh aclocal.m4 config.h.in install-sh missing mkinstalldirs
SUBDIRS	= bindings bitmaps config localized lib include tools clients doc demos

AUTOMAKE_OPTIONS = 1.4
