datadir = ${prefix}/share/Xm/doc

data_DATA = BUGREPORT CLOSEDBUGS COPYRIGHT.MOTIF LICENSE OPENBUGS \
            README RELEASE RELNOTES

EXTRA_DIST = BUGREPORT \
             CLOSEDBUGS \
             COPYRIGHT.MOTIF \
             Imakefile \
             LICENSE \
             OPENBUGS \
             README RELEASE RELNOTES \
             INSTALL.configure INSTALL.imake Makefile.imake-pure

MAINTAINERCLEANFILES = Makefile.in \
             configure libtool \
             config.guess \
             config.sub \
             ltconfig ltmain.sh \
             aclocal.m4 \
             config.h.in \
             install-sh \
             missing mkinstalldirs

SUBDIRS	= bindings bitmaps \
             config \
             localized \
             lib \
             include \
             tools \
             clients \
             doc \
             demos
AUTOMAKE_OPTIONS = 1.4
