EXTRA_DIST = bee.xpm bomb.xpm cherry.xpm da.xpm girlface.xpm k7.xpm labir.xpm main.xpm pile.xpm prev.xpm spir.xpm stack.xpm text.xpm
noinst_PROGRAMS = sampler2_0

SRCS = sampler2_0.c

LDADD = ../../lib/Xmd/libXmd.a ../../../lib/Xm/libXm.la

INCLUDES = -I$(srcdir)/../../lib -I$(srcdir)/../../../lib ${X_CFLAGS} 
