noinst_PROGRAMS = aicon
 
LDADD = ../../../lib/Xm/libXm.la -L../../lib/Xmd -lXmd

INCLUDES = -I$(srcdir)/../../../lib -I$(srcdir)/../../lib

#      DEMOLIBDIR = $(MTOP)/demos/lib/
#         DEMOLIB = $(DEMOLIBDIR)/Xmd/libXmd.a
#         DEPLIBS = $(DEMOLIB) XmClientDepLibs
# LOCAL_LIBRARIES = $(DEMOLIB) XmClientLibs 
# EXTRA_LIBRARIES = -lm 
#          MANDIR = /usr/local/man/man1
#       MANSUFFIX = 1     
#  EXTRA_INCLUDES = -I$(DEMOLIBDIR)
# 
# SRCS = aicon.c
# OBJS = aicon.o
# 
# MSimpleProgramTarget(aicon)
# 
# InstallProgram(aicon,$(BINDIR))
